// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client Query - Arabic = sans-serif 1`] = `
{
  "chars": Uint8Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
  ],
  "fontUrls": [
    "font-files/arabic/sans-serif.normal.400.woff",
    "font-files/latin/sans-serif.normal.400.woff",
  ],
}
`;

exports[`Client Query - Arabic = serif 1`] = `
{
  "chars": Uint8Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
  ],
  "fontUrls": [
    "font-files/arabic/serif.normal.400.woff",
    "font-files/latin/serif.normal.400.woff",
  ],
}
`;

exports[`Client Query - Bidi = sans-serif 1`] = `
{
  "chars": Uint8Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
  ],
  "fontUrls": [
    "font-files/arabic/sans-serif.normal.400.woff",
    "font-files/latin/sans-serif.normal.400.woff",
  ],
}
`;

exports[`Client Query - Bidi = serif 1`] = `
{
  "chars": Uint8Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
  ],
  "fontUrls": [
    "font-files/arabic/serif.normal.400.woff",
    "font-files/latin/serif.normal.400.woff",
  ],
}
`;

exports[`Client Query - Chinese = sans-serif 1`] = `
{
  "chars": Uint8Array [
    0,
    1,
    0,
    2,
    0,
    3,
    0,
    1,
    2,
    4,
    5,
    6,
    7,
    8,
    0,
    0,
    9,
    6,
    10,
    11,
    12,
    0,
    8,
    2,
    13,
    14,
    15,
    0,
    11,
    0,
    16,
    5,
    17,
    0,
    18,
    0,
    9,
    19,
    20,
    6,
    21,
    22,
    23,
    12,
    24,
    6,
    25,
    8,
    3,
    18,
    0,
    13,
    14,
    0,
    0,
    6,
    26,
    9,
    8,
    23,
    8,
    27,
    0,
    6,
    1,
    8,
    6,
    0,
    28,
    29,
    9,
    27,
    8,
    30,
    13,
    0,
    8,
    31,
    7,
    8,
    25,
    1,
    23,
    23,
    9,
    21,
    26,
    32,
    25,
    0,
    2,
    13,
    23,
    5,
    0,
    15,
    0,
    0,
    2,
    6,
    16,
    0,
    33,
    9,
    34,
    0,
    35,
    20,
    8,
    7,
    36,
    28,
    32,
    21,
    6,
    0,
    14,
    13,
    22,
    9,
    37,
    22,
    38,
    0,
    39,
    1,
    15,
    6,
    0,
    21,
    8,
    23,
    13,
    9,
    40,
    27,
    0,
    35,
    0,
    0,
    13,
    0,
    26,
    6,
    20,
    20,
    8,
    6,
    19,
    1,
    13,
    2,
    9,
  ],
  "fontUrls": [
    "font-files/sc-118/sans-serif.normal.400.woff",
    "font-files/sc-112/sans-serif.normal.400.woff",
    "font-files/sc-114/sans-serif.normal.400.woff",
    "font-files/sc-106/sans-serif.normal.400.woff",
    "font-files/sc-61/sans-serif.normal.400.woff",
    "font-files/sc-36/sans-serif.normal.400.woff",
    "font-files/sc-116/sans-serif.normal.400.woff",
    "font-files/sc-37/sans-serif.normal.400.woff",
    "font-files/sc-117/sans-serif.normal.400.woff",
    "font-files/mongolian/sans-serif.normal.400.woff",
    "font-files/sc-35/sans-serif.normal.400.woff",
    "font-files/sc-34/sans-serif.normal.400.woff",
    "font-files/sc-119/sans-serif.normal.400.woff",
    "font-files/sc-101/sans-serif.normal.400.woff",
    "font-files/sc-111/sans-serif.normal.400.woff",
    "font-files/sc-33/sans-serif.normal.400.woff",
    "font-files/sc-108/sans-serif.normal.400.woff",
    "font-files/sc-62/sans-serif.normal.400.woff",
    "font-files/sc-102/sans-serif.normal.400.woff",
    "font-files/sc-105/sans-serif.normal.400.woff",
    "font-files/sc-109/sans-serif.normal.400.woff",
    "font-files/sc-25/sans-serif.normal.400.woff",
    "font-files/sc-103/sans-serif.normal.400.woff",
    "font-files/sc-113/sans-serif.normal.400.woff",
    "font-files/sc-43/sans-serif.normal.400.woff",
    "font-files/sc-70/sans-serif.normal.400.woff",
    "font-files/sc-115/sans-serif.normal.400.woff",
    "font-files/sc-71/sans-serif.normal.400.woff",
    "font-files/sc-63/sans-serif.normal.400.woff",
    "font-files/sc-27/sans-serif.normal.400.woff",
    "font-files/sc-39/sans-serif.normal.400.woff",
    "font-files/sc-76/sans-serif.normal.400.woff",
    "font-files/sc-104/sans-serif.normal.400.woff",
    "font-files/sc-46/sans-serif.normal.400.woff",
    "font-files/sc-67/sans-serif.normal.400.woff",
    "font-files/sc-100/sans-serif.normal.400.woff",
    "font-files/sc-28/sans-serif.normal.400.woff",
    "font-files/sc-53/sans-serif.normal.400.woff",
    "font-files/nushu/sans-serif.normal.400.woff",
    "font-files/sc-82/sans-serif.normal.400.woff",
    "font-files/sc-73/sans-serif.normal.400.woff",
  ],
}
`;

exports[`Client Query - Chinese = serif 1`] = `
{
  "chars": Uint8Array [
    0,
    1,
    0,
    2,
    0,
    3,
    0,
    1,
    2,
    4,
    5,
    6,
    7,
    8,
    0,
    0,
    9,
    6,
    10,
    11,
    12,
    0,
    8,
    2,
    13,
    14,
    15,
    0,
    11,
    0,
    16,
    5,
    17,
    0,
    18,
    0,
    9,
    19,
    20,
    6,
    21,
    22,
    23,
    12,
    24,
    6,
    25,
    8,
    3,
    18,
    0,
    13,
    14,
    0,
    0,
    6,
    26,
    9,
    8,
    23,
    8,
    27,
    0,
    6,
    1,
    8,
    6,
    0,
    28,
    29,
    9,
    27,
    8,
    30,
    13,
    0,
    8,
    31,
    7,
    8,
    25,
    1,
    23,
    23,
    9,
    21,
    26,
    32,
    25,
    0,
    2,
    13,
    23,
    5,
    0,
    15,
    0,
    0,
    2,
    6,
    16,
    0,
    33,
    9,
    34,
    0,
    35,
    20,
    8,
    7,
    36,
    28,
    32,
    21,
    6,
    0,
    14,
    13,
    22,
    9,
    37,
    22,
    38,
    0,
    39,
    1,
    15,
    6,
    0,
    21,
    8,
    23,
    13,
    9,
    40,
    27,
    0,
    35,
    0,
    0,
    13,
    0,
    26,
    6,
    20,
    20,
    8,
    6,
    19,
    1,
    13,
    2,
    9,
  ],
  "fontUrls": [
    "font-files/sc-118/serif.normal.400.woff",
    "font-files/sc-112/serif.normal.400.woff",
    "font-files/sc-114/serif.normal.400.woff",
    "font-files/sc-106/serif.normal.400.woff",
    "font-files/sc-61/serif.normal.400.woff",
    "font-files/sc-36/serif.normal.400.woff",
    "font-files/sc-116/serif.normal.400.woff",
    "font-files/sc-37/serif.normal.400.woff",
    "font-files/sc-117/serif.normal.400.woff",
    "font-files/mongolian/sans-serif.normal.400.woff",
    "font-files/sc-35/serif.normal.400.woff",
    "font-files/sc-34/serif.normal.400.woff",
    "font-files/sc-119/serif.normal.400.woff",
    "font-files/sc-101/serif.normal.400.woff",
    "font-files/sc-111/serif.normal.400.woff",
    "font-files/sc-33/serif.normal.400.woff",
    "font-files/sc-108/serif.normal.400.woff",
    "font-files/sc-62/serif.normal.400.woff",
    "font-files/sc-102/serif.normal.400.woff",
    "font-files/sc-105/serif.normal.400.woff",
    "font-files/sc-109/serif.normal.400.woff",
    "font-files/sc-25/serif.normal.400.woff",
    "font-files/sc-103/serif.normal.400.woff",
    "font-files/sc-113/serif.normal.400.woff",
    "font-files/sc-43/serif.normal.400.woff",
    "font-files/sc-70/serif.normal.400.woff",
    "font-files/sc-115/serif.normal.400.woff",
    "font-files/sc-71/serif.normal.400.woff",
    "font-files/sc-63/serif.normal.400.woff",
    "font-files/sc-27/serif.normal.400.woff",
    "font-files/sc-39/serif.normal.400.woff",
    "font-files/sc-76/serif.normal.400.woff",
    "font-files/sc-104/serif.normal.400.woff",
    "font-files/sc-46/serif.normal.400.woff",
    "font-files/sc-67/serif.normal.400.woff",
    "font-files/sc-100/serif.normal.400.woff",
    "font-files/sc-28/serif.normal.400.woff",
    "font-files/sc-53/serif.normal.400.woff",
    "font-files/nushu/sans-serif.normal.400.woff",
    "font-files/sc-82/serif.normal.400.woff",
    "font-files/sc-73/serif.normal.400.woff",
  ],
}
`;

exports[`Client Query - Hebrew = sans-serif 1`] = `
{
  "chars": Uint8Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
  ],
  "fontUrls": [
    "font-files/hebrew/sans-serif.normal.400.woff",
    "font-files/latin/sans-serif.normal.400.woff",
  ],
}
`;

exports[`Client Query - Hebrew = serif 1`] = `
{
  "chars": Uint8Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
  ],
  "fontUrls": [
    "font-files/hebrew/serif.normal.400.woff",
    "font-files/latin/serif.normal.400.woff",
  ],
}
`;

exports[`Client Query - Japanese = sans-serif 1`] = `
{
  "chars": Uint8Array [
    0,
    1,
    0,
    0,
    2,
    2,
    2,
    2,
    2,
    3,
    4,
    5,
    2,
    6,
    4,
    2,
    7,
    8,
    2,
    4,
    9,
    2,
    10,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    11,
    0,
    2,
    2,
    12,
    13,
    2,
    2,
    2,
    2,
    2,
    2,
    9,
    14,
    2,
    2,
    2,
    2,
    15,
    1,
    16,
    0,
    6,
    17,
    2,
    4,
    9,
    2,
    14,
    18,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    0,
    11,
    2,
    0,
    11,
    17,
    2,
    1,
    19,
    2,
    2,
    0,
    1,
    2,
    5,
    5,
    2,
    18,
    2,
    2,
    2,
    2,
    2,
    5,
    20,
    0,
    21,
    2,
    2,
    2,
    2,
    2,
    2,
    13,
    17,
    17,
    2,
    5,
    22,
    2,
    15,
    1,
    2,
    5,
    2,
    2,
    2,
    2,
    23,
    24,
    17,
    2,
    24,
    25,
    2,
    2,
    2,
    9,
    14,
    2,
    23,
    5,
    2,
    2,
    0,
    11,
    2,
    0,
    5,
    2,
    0,
    15,
    2,
    14,
    13,
    2,
    2,
    2,
    26,
    13,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    0,
    0,
    2,
    14,
    14,
    2,
    8,
    27,
    2,
    2,
    4,
    2,
    2,
    0,
    15,
    2,
    15,
    3,
    2,
    2,
    2,
    28,
    17,
    2,
    29,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    15,
    2,
    14,
    9,
    2,
    2,
    2,
    2,
    0,
    11,
    2,
    5,
    1,
    2,
    2,
    2,
    2,
    2,
    30,
    15,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    10,
    4,
    0,
    2,
    1,
    13,
    0,
    3,
    2,
    15,
    12,
    2,
    29,
    1,
    2,
    2,
    2,
    2,
    2,
    30,
    15,
    2,
    2,
    2,
    2,
    2,
    2,
    4,
    9,
    15,
    0,
    2,
    10,
    4,
    21,
    2,
    2,
    4,
    15,
    31,
    32,
    2,
    2,
    2,
    2,
    2,
    14,
    0,
    4,
    0,
    11,
    16,
    0,
    0,
    2,
    7,
    8,
    17,
    2,
    13,
    3,
    12,
    2,
    2,
    14,
    5,
    2,
    5,
    11,
    2,
    2,
    2,
    2,
    2,
    5,
    33,
    2,
    14,
    13,
    13,
    2,
    2,
    2,
    2,
    2,
    0,
    26,
    0,
    2,
    2,
    15,
    1,
    2,
    2,
    2,
    2,
    0,
    0,
    4,
    1,
    28,
    2,
    0,
    5,
    4,
    3,
    2,
    13,
    0,
    2,
    2,
    29,
    1,
    2,
    2,
    2,
    2,
    2,
    9,
    4,
    2,
    2,
    2,
    2,
    2,
  ],
  "fontUrls": [
    "font-files/jp-117/sans-serif.normal.400.woff",
    "font-files/jp-110/sans-serif.normal.400.woff",
    "font-files/jp-119/sans-serif.normal.400.woff",
    "font-files/jp-107/sans-serif.normal.400.woff",
    "font-files/jp-115/sans-serif.normal.400.woff",
    "font-files/jp-114/sans-serif.normal.400.woff",
    "font-files/jp-103/sans-serif.normal.400.woff",
    "font-files/jp-85/sans-serif.normal.400.woff",
    "font-files/jp-101/sans-serif.normal.400.woff",
    "font-files/jp-112/sans-serif.normal.400.woff",
    "font-files/jp-89/sans-serif.normal.400.woff",
    "font-files/jp-106/sans-serif.normal.400.woff",
    "font-files/jp-105/sans-serif.normal.400.woff",
    "font-files/jp-113/sans-serif.normal.400.woff",
    "font-files/jp-111/sans-serif.normal.400.woff",
    "font-files/jp-116/sans-serif.normal.400.woff",
    "font-files/mongolian/sans-serif.normal.400.woff",
    "font-files/jp-100/sans-serif.normal.400.woff",
    "font-files/jp-90/sans-serif.normal.400.woff",
    "font-files/jp-64/sans-serif.normal.400.woff",
    "font-files/jp-65/sans-serif.normal.400.woff",
    "font-files/jp-104/sans-serif.normal.400.woff",
    "font-files/jp-80/sans-serif.normal.400.woff",
    "font-files/jp-98/sans-serif.normal.400.woff",
    "font-files/jp-94/sans-serif.normal.400.woff",
    "font-files/jp-77/sans-serif.normal.400.woff",
    "font-files/jp-92/sans-serif.normal.400.woff",
    "font-files/jp-95/sans-serif.normal.400.woff",
    "font-files/jp-109/sans-serif.normal.400.woff",
    "font-files/jp-87/sans-serif.normal.400.woff",
    "font-files/jp-82/sans-serif.normal.400.woff",
    "font-files/jp-83/sans-serif.normal.400.woff",
    "font-files/jp-97/sans-serif.normal.400.woff",
    "font-files/jp-108/sans-serif.normal.400.woff",
  ],
}
`;

exports[`Client Query - Japanese = serif 1`] = `
{
  "chars": Uint8Array [
    0,
    1,
    0,
    0,
    2,
    2,
    2,
    2,
    2,
    3,
    4,
    5,
    2,
    6,
    4,
    2,
    7,
    8,
    2,
    4,
    9,
    2,
    10,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    11,
    0,
    2,
    2,
    12,
    13,
    2,
    2,
    2,
    2,
    2,
    2,
    9,
    14,
    2,
    2,
    2,
    2,
    15,
    1,
    16,
    0,
    6,
    17,
    2,
    4,
    9,
    2,
    14,
    18,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    0,
    11,
    2,
    0,
    11,
    17,
    2,
    1,
    19,
    2,
    2,
    0,
    1,
    2,
    5,
    5,
    2,
    18,
    2,
    2,
    2,
    2,
    2,
    5,
    20,
    0,
    21,
    2,
    2,
    2,
    2,
    2,
    2,
    13,
    17,
    17,
    2,
    5,
    22,
    2,
    15,
    1,
    2,
    5,
    2,
    2,
    2,
    2,
    23,
    24,
    17,
    2,
    24,
    25,
    2,
    2,
    2,
    9,
    14,
    2,
    23,
    5,
    2,
    2,
    0,
    11,
    2,
    0,
    5,
    2,
    0,
    15,
    2,
    14,
    13,
    2,
    2,
    2,
    26,
    13,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    0,
    0,
    2,
    14,
    14,
    2,
    8,
    27,
    2,
    2,
    4,
    2,
    2,
    0,
    15,
    2,
    15,
    3,
    2,
    2,
    2,
    28,
    17,
    2,
    29,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    15,
    2,
    14,
    9,
    2,
    2,
    2,
    2,
    0,
    11,
    2,
    5,
    1,
    2,
    2,
    2,
    2,
    2,
    30,
    15,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    10,
    4,
    0,
    2,
    1,
    13,
    0,
    3,
    2,
    15,
    12,
    2,
    29,
    1,
    2,
    2,
    2,
    2,
    2,
    30,
    15,
    2,
    2,
    2,
    2,
    2,
    2,
    4,
    9,
    15,
    0,
    2,
    10,
    4,
    21,
    2,
    2,
    4,
    15,
    31,
    32,
    2,
    2,
    2,
    2,
    2,
    14,
    0,
    4,
    0,
    11,
    16,
    0,
    0,
    2,
    7,
    8,
    17,
    2,
    13,
    3,
    12,
    2,
    2,
    14,
    5,
    2,
    5,
    11,
    2,
    2,
    2,
    2,
    2,
    5,
    33,
    2,
    14,
    13,
    13,
    2,
    2,
    2,
    2,
    2,
    0,
    26,
    0,
    2,
    2,
    15,
    1,
    2,
    2,
    2,
    2,
    0,
    0,
    4,
    1,
    28,
    2,
    0,
    5,
    4,
    3,
    2,
    13,
    0,
    2,
    2,
    29,
    1,
    2,
    2,
    2,
    2,
    2,
    9,
    4,
    2,
    2,
    2,
    2,
    2,
  ],
  "fontUrls": [
    "font-files/jp-117/serif.normal.400.woff",
    "font-files/jp-110/serif.normal.400.woff",
    "font-files/jp-119/serif.normal.400.woff",
    "font-files/jp-107/serif.normal.400.woff",
    "font-files/jp-115/serif.normal.400.woff",
    "font-files/jp-114/serif.normal.400.woff",
    "font-files/jp-103/serif.normal.400.woff",
    "font-files/jp-85/serif.normal.400.woff",
    "font-files/jp-101/serif.normal.400.woff",
    "font-files/jp-112/serif.normal.400.woff",
    "font-files/jp-89/serif.normal.400.woff",
    "font-files/jp-106/serif.normal.400.woff",
    "font-files/jp-105/serif.normal.400.woff",
    "font-files/jp-113/serif.normal.400.woff",
    "font-files/jp-111/serif.normal.400.woff",
    "font-files/jp-116/serif.normal.400.woff",
    "font-files/mongolian/sans-serif.normal.400.woff",
    "font-files/jp-100/serif.normal.400.woff",
    "font-files/jp-90/serif.normal.400.woff",
    "font-files/jp-64/serif.normal.400.woff",
    "font-files/jp-65/serif.normal.400.woff",
    "font-files/jp-104/serif.normal.400.woff",
    "font-files/jp-80/serif.normal.400.woff",
    "font-files/jp-98/serif.normal.400.woff",
    "font-files/jp-94/serif.normal.400.woff",
    "font-files/jp-77/serif.normal.400.woff",
    "font-files/jp-92/serif.normal.400.woff",
    "font-files/jp-95/serif.normal.400.woff",
    "font-files/jp-109/serif.normal.400.woff",
    "font-files/jp-87/serif.normal.400.woff",
    "font-files/jp-82/serif.normal.400.woff",
    "font-files/jp-83/serif.normal.400.woff",
    "font-files/jp-97/serif.normal.400.woff",
    "font-files/jp-108/serif.normal.400.woff",
  ],
}
`;

exports[`Client Query - Latin = sans-serif 1`] = `
{
  "chars": Uint8Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "fontUrls": [
    "font-files/latin/sans-serif.normal.400.woff",
  ],
}
`;

exports[`Client Query - Latin = serif 1`] = `
{
  "chars": Uint8Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "fontUrls": [
    "font-files/latin/serif.normal.400.woff",
  ],
}
`;
